--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,40 @@
   }
 }
 
+.navBar{
+  background-color: rgb(1, 99, 145);
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: aliceblue;
+  font-size: 5vh;
+}
+
+.beer-container{
+  width: 40vw;
+  display: flex;
+  border: solid black;
+  justify-content: space-around;
+  margin: 1vh;
+  border-radius: 20px;
+  padding: 30px;
+}
+
+.beers-container{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.description{
+  text-align: left;
+}
+a{
+  text-decoration: none;
+  color: #282c34;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -25,7 +59,7 @@
 }
 
 .App-link {
-  color: #61dafb;
+  text-decoration: none;
 }
 
 @keyframes App-logo-spin {
